[gd_scene load_steps=29 format=3 uid="uid://caj73aiw7tf22"]

[ext_resource type="PackedScene" uid="uid://boiifphcf1mge" path="res://scenes/enemies/abstract_enemies/stateful_enemy.tscn" id="1_y5h52"]
[ext_resource type="Texture2D" uid="uid://7b80ixyf6507" path="res://assets/sprites/enemies/monsters/spear/spear_13.png" id="2_2pbv7"]
[ext_resource type="Script" uid="uid://bim20bdqt4yld" path="res://scripts/enemies/minions/melees/big_aborigine/big_aborigine.gd" id="2_uo468"]
[ext_resource type="Texture2D" uid="uid://bvbiaf8kin41n" path="res://assets/sprites/enemies/monsters/spear/spear_14.png" id="3_uo468"]
[ext_resource type="Texture2D" uid="uid://cgu5gtto40dcs" path="res://assets/sprites/enemies/monsters/spear/spear_15.png" id="4_pe0o6"]
[ext_resource type="Texture2D" uid="uid://bvk1wyh200ndb" path="res://assets/sprites/enemies/monsters/spear/spear_16.png" id="5_4qjn0"]
[ext_resource type="Texture2D" uid="uid://4j8nk7vkp4dl" path="res://assets/sprites/enemies/monsters/spear/spear_17.png" id="6_up5at"]
[ext_resource type="Texture2D" uid="uid://1u7kimbp81gh" path="res://assets/sprites/enemies/monsters/spear/spear_18.png" id="7_7w40s"]
[ext_resource type="Texture2D" uid="uid://b7r8ok4c2joj0" path="res://assets/sprites/enemies/monsters/spear/spear_5.png" id="8_acwd7"]
[ext_resource type="Texture2D" uid="uid://dsmq4ksgxty26" path="res://assets/sprites/enemies/monsters/spear/spear_6.png" id="9_3eiac"]
[ext_resource type="Texture2D" uid="uid://4oedp5c3nihy" path="res://assets/sprites/enemies/monsters/spear/spear_7.png" id="10_csn37"]
[ext_resource type="Texture2D" uid="uid://c7bcen2ofnedx" path="res://assets/sprites/enemies/monsters/spear/spear_8.png" id="11_3au7p"]
[ext_resource type="Texture2D" uid="uid://8j3j06x85uqn" path="res://assets/sprites/enemies/monsters/spear/spear_9.png" id="12_v2mnh"]
[ext_resource type="Texture2D" uid="uid://bbmw2dbfm3ut0" path="res://assets/sprites/enemies/monsters/spear/spear_10.png" id="13_p50sn"]
[ext_resource type="Texture2D" uid="uid://c6ieee4png12f" path="res://assets/sprites/enemies/monsters/spear/spear_1.png" id="13_xwdf4"]
[ext_resource type="Texture2D" uid="uid://f4s0y4n1icha" path="res://assets/sprites/enemies/monsters/spear/spear_11.png" id="14_13kny"]
[ext_resource type="Texture2D" uid="uid://cuq738phbncvi" path="res://assets/sprites/enemies/monsters/spear/spear_2.png" id="14_b3f77"]
[ext_resource type="Texture2D" uid="uid://dje7itgwmabi5" path="res://assets/sprites/enemies/monsters/spear/spear_3.png" id="15_5lulg"]
[ext_resource type="Texture2D" uid="uid://dey6wk7b3euj5" path="res://assets/sprites/enemies/monsters/spear/spear_12.png" id="15_tu5ur"]
[ext_resource type="Texture2D" uid="uid://cs18v4ikcyit5" path="res://assets/sprites/enemies/monsters/spear/spear_4.png" id="16_gvf0t"]
[ext_resource type="Script" uid="uid://cuat5txuhbdg5" path="res://scripts/enemies/states/enemy_state.gd" id="17_iqgui"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t2n8h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2pbv7")
}, {
"duration": 1.0,
"texture": ExtResource("3_uo468")
}, {
"duration": 1.0,
"texture": ExtResource("4_pe0o6")
}, {
"duration": 1.0,
"texture": ExtResource("5_4qjn0")
}],
"loop": true,
"name": &"defend",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_up5at")
}, {
"duration": 1.0,
"texture": ExtResource("7_7w40s")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_acwd7")
}, {
"duration": 1.0,
"texture": ExtResource("9_3eiac")
}, {
"duration": 1.0,
"texture": ExtResource("10_csn37")
}, {
"duration": 1.0,
"texture": ExtResource("11_3au7p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_xwdf4")
}, {
"duration": 1.0,
"texture": ExtResource("14_b3f77")
}, {
"duration": 1.0,
"texture": ExtResource("15_5lulg")
}, {
"duration": 1.0,
"texture": ExtResource("16_gvf0t")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_v2mnh")
}, {
"duration": 1.0,
"texture": ExtResource("13_p50sn")
}, {
"duration": 1.0,
"texture": ExtResource("14_13kny")
}, {
"duration": 1.0,
"texture": ExtResource("15_tu5ur")
}],
"loop": false,
"name": &"stab",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dj1wj"]
size = Vector2(21, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luhr0"]
size = Vector2(39, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5h52"]
size = Vector2(21, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_luhr0"]
radius = 120.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pbv7"]
size = Vector2(17, 32.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo468"]
size = Vector2(24, 40)

[node name="BigAborigine" groups=["melee"] instance=ExtResource("1_y5h52")]
script = ExtResource("2_uo468")
stab_time = 0.8
attack_cooldown = 2.0
defend_multiplier = 1.5
initial_state = 0
hurt_time = 0.4
awake_time = 2.0
health = 300.0
spike = 150.0
movement_speed = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction" index="0"]
modulate = Color(0.8039, 0.651486, 1, 1)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_t2n8h")
animation = &"normal"

[node name="HitArea2D" parent="Direction" index="1"]
visible = false

[node name="AttackCollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D" index="0"]
position = Vector2(28.5, 12)
shape = SubResource("RectangleShape2D_dj1wj")
disabled = true

[node name="NormalCollisionShape2D" parent="Direction/HitArea2D" index="1"]
visible = false
position = Vector2(4.5, 3.5)
shape = SubResource("RectangleShape2D_luhr0")

[node name="HurtArea2D" parent="Direction" index="2"]
visible = false

[node name="CollisionShape2D" parent="Direction/HurtArea2D" index="0"]
position = Vector2(-2.5, 1.5)
shape = SubResource("RectangleShape2D_y5h52")

[node name="FrontRayCast2D" parent="Direction" index="3"]
position = Vector2(29, -20)
target_position = Vector2(0, 40)

[node name="DownRayCast2D" parent="Direction" index="4"]
position = Vector2(12, 20)
target_position = Vector2(0, 48)

[node name="DetectPlayerArea2D" parent="Direction" index="6"]
visible = false

[node name="CollisionPolygon2D" parent="Direction/DetectPlayerArea2D" index="0"]
polygon = PackedVector2Array(0, 0, 50, -80, 50, 40)

[node name="NearSenseArea2D" parent="Direction" index="7"]
visible = false

[node name="CollisionShape2D" parent="Direction/NearSenseArea2D" index="0"]
shape = SubResource("CircleShape2D_luhr0")

[node name="Shield" type="StaticBody2D" parent="Direction" index="8"]
collision_layer = 24
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/Shield" index="0"]
position = Vector2(17, 0.25)
shape = SubResource("RectangleShape2D_2pbv7")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_uo468")

[node name="AttackTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Defend" type="Node" parent="States" index="3"]
script = ExtResource("17_iqgui")
metadata/_custom_type_script = "uid://cuat5txuhbdg5"

[node name="Stab" type="Node" parent="States" index="4"]
script = ExtResource("17_iqgui")
metadata/_custom_type_script = "uid://cuat5txuhbdg5"
